# testpy

./: .coverage  .gitignore  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
src/add/: main.py
src/add.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/adding.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_main.py
