[metadata]
name = add
description = add that numbers
author = Xnpltn
licence = MIT
licence_file = LICENCE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = 
    add
install_requires = 
    requests>=2
python_requires = >=3.6
package_dir = 
    =src
zip_safe = no


[options.extras_require]
testing = 
    flake8>=3.9
    tox>=3.24
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910

[options.package_data]
add = py.typed

[flake8]
max-line-length = 160